@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="System" style="swimlane;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="20" y="20" width="550" height="360" as="geometry"/></mxCell><mxCell id="3" value="Linux kernel" style="swimlane;whiteSpace=wrap" vertex="1" parent="2"><mxGeometry x="210" y="230" width="200" height="110" as="geometry"/></mxCell><mxCell id="4" value="audit subsystem" style="shape=ext;double=1;whiteSpace=wrap" vertex="1" parent="3"><mxGeometry x="10" y="30" width="120" height="60" as="geometry"/></mxCell><mxCell id="5" value="(system activity)" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="20" y="230" width="140" height="60" as="geometry"/></mxCell><mxCell id="6" value="auditd&#xa;(daemon)" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="210" y="150" width="140" height="60" as="geometry"/></mxCell><mxCell id="7" value="audispd&#xa;(daemon)" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="380" y="150" width="140" height="60" as="geometry"/></mxCell><mxCell id="8" value="audit.log" style="shape=document;whiteSpace=wrap" vertex="1" parent="2"><mxGeometry x="395" y="80" width="110" height="50" as="geometry"/></mxCell><mxCell id="9" value="ausearch&#xa;(command)" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="210" y="90" width="140" height="40" as="geometry"/></mxCell><mxCell id="10" value="aureport&#xa;(command)" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="210" y="40" width="140" height="40" as="geometry"/></mxCell><mxCell id="11" value="auditctl&#xa;(command)" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="20" y="160" width="140" height="40" as="geometry"/></mxCell><mxCell id="12" value="audit.rules" style="shape=note;whiteSpace=wrap" vertex="1" parent="2"><mxGeometry x="60" y="30" width="60" height="90" as="geometry"/></mxCell><mxCell id="13" value="" style="edgeStyle=none" edge="1" parent="2" source="12" target="11"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="90" y="190" as="sourcePoint"/><mxPoint x="190" y="90" as="targetPoint"/></mxGeometry></mxCell><mxCell id="14" value="" style="edgeStyle=none" edge="1" parent="2" source="11" target="6"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="120" y="190" as="sourcePoint"/><mxPoint x="220" y="90" as="targetPoint"/></mxGeometry></mxCell><mxCell id="15" value="write" style="edgeStyle=none" edge="1" parent="2" source="6" target="8"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="310" y="200" as="sourcePoint"/><mxPoint x="410" y="100" as="targetPoint"/></mxGeometry></mxCell><mxCell id="16" value="send" style="edgeStyle=none" edge="1" parent="2" source="6" target="7"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="310" y="200" as="sourcePoint"/><mxPoint x="410" y="100" as="targetPoint"/></mxGeometry></mxCell><mxCell id="17" value="read" style="edgeStyle=none" edge="1" parent="2" source="9" target="8"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="240" y="110" as="sourcePoint"/><mxPoint x="340" y="10" as="targetPoint"/></mxGeometry></mxCell><mxCell id="18" value="read" style="edgeStyle=none" edge="1" parent="2" source="10" target="8"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="280" y="150" as="sourcePoint"/><mxPoint x="380" y="50" as="targetPoint"/></mxGeometry></mxCell><mxCell id="19" value="" style="edgeStyle=none;entryX=0;entryY=0.5;endArrow=none;endFill=0" edge="1" parent="2" source="5" target="3"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="110" y="270" as="sourcePoint"/><mxPoint x="210" y="170" as="targetPoint"/></mxGeometry></mxCell><mxCell id="20" value="" style="edgeStyle=none" edge="1" parent="2" source="4" target="6"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="240" y="290" as="sourcePoint"/><mxPoint x="340" y="190" as="targetPoint"/></mxGeometry></mxCell></root></mxGraphModel>
