@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="7" value="System" style="swimlane;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="22.5" y="15" width="487.5" height="355" as="geometry"/></mxCell><mxCell id="2" value="syslog daemon" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="7"><mxGeometry x="265" y="117.5" width="140" height="60" as="geometry"/></mxCell><mxCell id="3" value="syslog&#xa;config" style="shape=note;whiteSpace=wrap" vertex="1" parent="7"><mxGeometry x="380" y="210" width="70" height="80" as="geometry"/></mxCell><mxCell id="4" value="logger&#xa;(command)" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="7"><mxGeometry x="50" y="160" width="140" height="60" as="geometry"/></mxCell><mxCell id="6" value="Locally running daemons" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="7"><mxGeometry x="50" y="70" width="140" height="60" as="geometry"/></mxCell><mxCell id="8" value="/dev/log&#xa;socket" style="shape=hexagon;whiteSpace=wrap" vertex="1" parent="7"><mxGeometry x="265" y="50" width="115" height="40" as="geometry"/></mxCell><mxCell id="11" value="" style="shape=document;whiteSpace=wrap" vertex="1" parent="7"><mxGeometry x="215" y="210" width="120" height="80" as="geometry"/></mxCell><mxCell id="12" value="Log files&#xa;(targets)" style="shape=document;whiteSpace=wrap" vertex="1" parent="7"><mxGeometry x="205" y="220" width="120" height="80" as="geometry"/></mxCell><mxCell id="21" value="write" style="edgeStyle=none" edge="1" parent="7" source="4" target="8"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="147.5" y="205" as="sourcePoint"/><mxPoint x="247.5" y="105" as="targetPoint"/></mxGeometry></mxCell><mxCell id="22" value="write" style="edgeStyle=none" edge="1" parent="7" source="6" target="8"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="167.5" y="145" as="sourcePoint"/><mxPoint x="267.5" y="45" as="targetPoint"/></mxGeometry></mxCell><mxCell id="23" value="read" style="edgeStyle=none;endArrow=none;endFill=0;startArrow=classic;startFill=1" edge="1" parent="7" source="2" target="8"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="277.5" y="175" as="sourcePoint"/><mxPoint x="377.5" y="75" as="targetPoint"/></mxGeometry></mxCell><mxCell id="24" value="write" style="edgeStyle=none" edge="1" parent="7" source="2" target="12"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="87.5" y="295" as="sourcePoint"/><mxPoint x="187.5" y="195" as="targetPoint"/></mxGeometry></mxCell><mxCell id="25" value="read" style="edgeStyle=none" edge="1" parent="7" source="3" target="2"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="347.5" y="285" as="sourcePoint"/><mxPoint x="447.5" y="185" as="targetPoint"/></mxGeometry></mxCell><mxCell id="13" value="Remote daemons&#xa;" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="1"><mxGeometry x="665" y="118.5" width="140" height="60" as="geometry"/></mxCell><mxCell id="14" value="(Includes remote syslogs)" style="text;spacingTop=-5;" vertex="1" parent="1"><mxGeometry x="670" y="182.5" width="130" height="20" as="geometry"/></mxCell><mxCell id="15" value="" style="rhombus;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="498.75" y="131.25" width="22.5" height="27.5" as="geometry"/></mxCell><mxCell id="20" value="TCP:514" style="text;spacingTop=-5;" vertex="1" parent="1"><mxGeometry x="521.25" y="162.5" width="68.75" height="20" as="geometry"/></mxCell><mxCell id="26" value="read&#xa;write" style="edgeStyle=none;entryX=0;entryY=0.5;startArrow=classic;startFill=1" edge="1" parent="1" source="2" target="15"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="370" y="180" as="sourcePoint"/><mxPoint x="470" y="80" as="targetPoint"/></mxGeometry></mxCell><mxCell id="27" value="send&#xa;receive" style="edgeStyle=none;entryX=1;entryY=0.5;endArrow=classic;endFill=1;startArrow=classic;startFill=1" edge="1" parent="1" source="13" target="15"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="560" y="330" as="sourcePoint"/><mxPoint x="660" y="230" as="targetPoint"/></mxGeometry></mxCell></root></mxGraphModel>
