@@ -1,3 +1,6 @@
+** (2013-12-17) Sven Vermeulen <sven.vermeulen@siphos.be>
+	- Add info on audit/syslog
+
 ** (2013-12-13) Sven Vermeulen <sven.vermeulen@siphos.be>
 	- Update platform information
 
